# xgift

./: README.md  example.py  pyproject.toml
xgift/: __init__.py  gift.py  raw.py  utils.py
