[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xgift"
version = "0.2.1"
authors = [
  {name = "aiofake", email = "g3657775@gmail.com"},
]
description = "Python библиотека для работы с xGift API"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "httpx",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aiofake/xgift"
"Bug Tracker" = "https://github.com/aiofake/xgift/issues"